--- a/web-meet-up-for-fitness/index.html
+++ b/web-meet-up-for-fitness/index.html
@@ -1,8 +1,3 @@
-<?php 
-$variable = $_POST['variable'];
-
-?>
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -23,7 +18,7 @@ $variable = $_POST['variable'];
     <link rel="stylesheet" type="text/css" href="css/jasny-bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/animate.css">
 
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.2.0/jquery-confirm.min.css">
     <!-- Stylesheet
     ================================================== -->
     <link rel="stylesheet" type="text/css"  href="css/style.css">
@@ -66,10 +61,10 @@ $variable = $_POST['variable'];
             </ul>
 
             <div id="cd-login"> <!-- log in form -->
-                <form class="cd-form" action="activity.html">
+                <form class="cd-form" method="POST" onsubmit="return login_submit();">
                     <p class="fieldset">
-                        <label class="image-replace cd-email" for="signin-email">E-mail</label>
-                        <input class="full-width has-padding has-border" id="signin-email" type="email" placeholder="E-mail">
+                        <label class="image-replace cd-username" for="signin-email">Username</label>
+                        <input class="full-width has-padding has-border" id="signin-email" type="text" placeholder="Username">
                         <span class="cd-error-message">Error message here!</span>
                     </p>
 
@@ -90,35 +85,29 @@ $variable = $_POST['variable'];
                     </p>
                 </form>
                 
-                <p class="cd-form-bottom-message"><a href="#0">Forgot your password?</a></p>
                 <!-- <a href="#0" class="cd-close-form">Close</a> -->
             </div> <!-- cd-login -->
 
             <div id="cd-signup"> <!-- sign up form -->
-                <form class="cd-form">
+                <form class="cd-form" id='register_id' method="POST" onsubmit="return register_submit();">
                     <p class="fieldset">
                         <label class="image-replace cd-username" for="signup-username">Username</label>
-                        <input class="full-width has-padding has-border" id="signup-username" type="text" placeholder="Username">
+                        <input class="full-width has-padding has-border" id="signup-username" type="text" placeholder="Username" value=''>
                         <span class="cd-error-message">Error message here!</span>
                     </p>
 
                     <p class="fieldset">
                         <label class="image-replace cd-email" for="signup-email">E-mail</label>
-                        <input class="full-width has-padding has-border" id="signup-email" type="email" placeholder="E-mail">
+                        <input class="full-width has-padding has-border" id="signup-email" type="email" placeholder="E-mail" value=''>
                         <span class="cd-error-message">Error message here!</span>
                     </p>
 
                     <p class="fieldset">
                         <label class="image-replace cd-password" for="signup-password">Password</label>
-                        <input class="full-width has-padding has-border" id="signup-password" type="text"  placeholder="Password">
+                        <input class="full-width has-padding has-border" id="signup-password" type="text"  placeholder="Password" value=''>
                         <a href="#0" class="hide-password">Hide</a>
                         <span class="cd-error-message">Error message here!</span>
-                    </p>
-
-                    <p class="fieldset">
-                        <input type="checkbox" id="accept-terms">
-                        <label for="accept-terms">I agree to the <a href="#0">Terms</a></label>
-                    </p>
+                    </p> 
 
                     <p class="fieldset">
                         <input class="full-width has-padding" type="submit" value="Create account">
@@ -128,23 +117,6 @@ $variable = $_POST['variable'];
                 <!-- <a href="#0" class="cd-close-form">Close</a> -->
             </div> <!-- cd-signup -->
 
-            <div id="cd-reset-password"> <!-- reset password form -->
-                <p class="cd-form-message">Lost your password? Please enter your email address. You will receive a link to create a new password.</p>
-
-                <form class="cd-form">
-                    <p class="fieldset">
-                        <label class="image-replace cd-email" for="reset-email">E-mail</label>
-                        <input class="full-width has-padding has-border" id="reset-email" type="email" placeholder="E-mail">
-                        <span class="cd-error-message">Error message here!</span>
-                    </p>
-
-                    <p class="fieldset">
-                        <input class="full-width has-padding" type="submit" value="Reset password">
-                    </p>
-                </form>
-
-                <p class="cd-form-bottom-message"><a href="#0">Back to log-in</a></p>
-            </div> <!-- cd-reset-password -->
             <a href="#0" class="cd-close-form">Close</a>
         </div> <!-- cd-user-modal-container -->
     </div> <!-- cd-user-modal -->
@@ -187,13 +159,11 @@ $variable = $_POST['variable'];
     <script type="text/javascript" src="js/jasny-bootstrap.min.js"></script>
     <script src="js/jquery.colorbox.js"></script>
     <script src="js/log.js"></script> <!-- Gem jQuery -->
-    <script>
-        function lightbox(){    
-          $.colorbox({width:"45%", height:"80%", iframe:true, href:"create_new_activity.html"
-        });
-        }
-    </script>
+    <script src="js/register.js"></script> 
+
     <script src="js/typed.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.2.0/jquery-confirm.min.js"></script>
+
     <script>
       $(function(){
           $("#head-title").typed({
