--- a/web-meet-up-for-fitness/activity.html
+++ b/web-meet-up-for-fitness/activity.html
@@ -199,7 +199,7 @@
 				}
 				function lightbox3(){
 					var userId = my_activity_userId_retrieve();
-						$.colorbox({width:"35%", height:"80%", iframe:true, href:"profile.html?userId=" + userId
+						$.colorbox({width:"40%", height:"80%", iframe:true, href:"profile2.html?userId=" + userId
 
 				});
 				}
