--- a/web-meet-up-for-fitness/profile2.html
+++ b/web-meet-up-for-fitness/profile2.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 </head>
 <body>
-<!--   <div id="w">
+  <div id="w">
     <div id="content" class="clearfix">
       <div id="userphoto"><img src="img/avatar.png" alt="default avatar"></div>
       <h1>My Profile</h1>
@@ -37,16 +37,15 @@
         <input type="button" value="Back" onclick="history.back(-1)" />
       </section>
 
-      <section id="friends" class="hidden">
-        <p>Friends list:</p>
 
-        <ul id="friendslist" class="clearfix">
-          <li><a href="#"><img src="img/avatar.png" width="22" height="22"> Username</a></li>
-          <li><a href="#"><img src="img/avatar.png" width="22" height="22"> SomeGuy123</a></li>
-          <li><a href="#"><img src="img/avatar.png" width="22" height="22"> PurpleGiraffe</a></li>
-        </ul>
-          <input type="button" value="Back" onclick="history.back(-1)" />
+
+      <section id="friends" class="hidden">
+        <p>Recent activities:</p>
+        <p id = "friend_name" class = "activity"> </p>
+        <p id = "friend_name" class = "activity">lllll </p>
+
       </section>
+
 
       <section id="settings" class="hidden">
         <p>Edit your user settings:</p>
@@ -58,8 +57,8 @@
         <p class="setting"><span>Connected Accounts <img src="img/edit.png" alt="*Edit*"></span> None</p>
         <input type="button" value="Back" onclick="history.back(-1)" />
       </section>
-    </div>
-  </div>
+    </div><!-- @end #content -->
+  </div><!-- @end #w -->
 <script type="text/javascript">
 $(function(){
   $('#profiletabs ul li a').on('click', function(e){
@@ -76,66 +75,46 @@ $(function(){
     $(newcontent).removeClass('hidden');
   });
 });
-</script> -->
+</script>
 
-<div class="container">
-<form class="well form-horizontal" method="post"  id="contact_form" >
-<fieldset>
-<legend align='center'>Add Friend</legend>
+<script>
+    //need to change
+    var userID = 65;
+    var result;
+     $.ajax({
+               "dataType": "json",
+                "async": false,
+                "crossDomain": true,
+                "url": "http://@ec2-52-7-74-13.compute-1.amazonaws.com/friends/" + userID,
+                "method": "GET",
+                "headers": {
+                    "content-type": "application/json",
+                },
+                "processData": false,
+                success: function(data){
+                    result = data;
+                },
 
-<div class="form-group">
-  <label class="col-md-4 control-label">FriendID</label>
-    <div class="col-md-4 inputGroupContainer">
-    <div class="input-group">
-        <span class="input-group-addon"><i class="glyphicon glyphicon-hand-up"></i></span>
-  <input id= "friendidd" name="friendname" placeholder="999" class="form-control" type="text">
-    </div>
-  </div>
-</div>
+                error: function(jqxhr, textStatus, errorThrown){
+                    console.log("error");
+                    console.log(textStatus);
+                    console.log(errorThrown);
 
-<ol id="input">
-  <li> Tea </li>
-  <li> Mile </li>
-</ol>
+                }
+        });
 
-<!-- Button -->
-<div class="form-group">
-  <label class="col-md-4 control-label"></label>
-  <div class="col-md-4">
-    <button type="submit" id="submit_friendrequest_id"class="btn btn-warning" >Send <span class="glyphicon glyphicon-send"></span></button>
-  </div>
-</div>
-
-</fieldset>
-</form>
-</div>
-
-
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.4.5/js/bootstrapvalidator.min.js'></script>
-
-<script type="text/javascript" src="js/moment.js"></script>
-<script type="text/javascript" src="js/transition.js"></script>
-<script type="text/javascript" src="js/collapse.js"></script>
-<script type="text/javascript" src="js/bootstrap-datetimepicker.min.js"></script>
-
-<script type="text/javascript">
-    $('.form_datetime').datetimepicker({
-        //language:  'fr',
-        weekStart: 1,
-        todayBtn:  1,
-        autoclose: 1,
-        todayHighlight: 1,
-        startView: 2,
-        forceParse: 0,
-        showMeridian: 1
-    });
+        var x = document.getElementById("friend_name");
+        var p;
+        var text;
+        for (var i = 0; i < result['Friends List'].length; i++)
+        {
+          //p = document.createElement("P");
+          text = document.createTextNode(result['Friends List'][0]['username'])
+          x.append(text);
+        }
 
 
 </script>
-<script src="js/addfriend.js"></script>
-
 
 </body>
 </html>
