create_team_activity

--- a/web-meet-up-for-fitness/create_new_team_activity.html
+++ b/web-meet-up-for-fitness/create_new_team_activity.html
@@ -215,8 +215,17 @@ function geolocate() {
 </script>
 
 <script>
-    //need to change
-    var userID = 65;
+    function getQueryVariable(variable)
+    {
+       var query = window.location.search.substring(1);
+       var vars = query.split("&");
+       for (var i=0;i<vars.length;i++) {
+               var pair = vars[i].split("=");
+               if(pair[0] == variable){return pair[1];}
+       }
+       return(false);
+    }
+    var userID = getQueryVariable("userId");
     var result;
      $.ajax({
                "dataType": "json",
@@ -254,8 +263,17 @@ function geolocate() {
 
 
 <script>
-    //need to change
-    var userID = 65;
+        function getQueryVariable(variable)
+    {
+       var query = window.location.search.substring(1);
+       var vars = query.split("&");
+       for (var i=0;i<vars.length;i++) {
+               var pair = vars[i].split("=");
+               if(pair[0] == variable){return pair[1];}
+       }
+       return(false);
+    }
+    var userID = getQueryVariable("userId");
     var result;
      $.ajax({
                "dataType": "json",
